2004-09-21 Mikhail Khodjaiants
	Fixed the problems with the Disassembly view and address breakpoints caused by switch to IAddress.
	* CBreakpointManager.java
	* AsmInstruction.java
	* Disassembly.java
	* DisassemblyBlock.java
	* src/org/eclipse/cdt/debug/internal/core/CDebugUtils.java: removed

2004-09-21 Mikhail Khodjaiants
	Changes to the IBinary interface
	* CDebugTarget.java

2004-09-20 Mikhail Khodjaiants
	Evaluate expressions on stack frame instead of target to provide evaluation context.
	* ICDebugTarget.java
	* ICStackFrame.java
	* ICExpressionEvaluator.java
	* AbstractCValue.java
	* AbstractCVariable.java
	* CArrayPartition.java
	* CArrayPartitionValue.java
	* CDebugTarget.java
	* CFormattedMemoryBlock.java
	* CStackFrame.java
	* CThread.java
	* CValue.java
	* CVariable.java

2004-09-17 Alain Magloire
	Support for 64 bits application
	PR 74056. Pathc from Artyom Kuanbekov
	To much files to enumerate.

2004-09-15 Mikhail Khodjaiants
	Removed the "ISwitchToThread" and "ISwitchToFrame" interfaces.
	* ICDebugTarget.java
	* ISwitchToThread.java: removed
	* ISwitchToFrame.java: removed
	* CDebugTarget.java
	* CStackFrame.java
	* CThread.java

2004-09-13 Mikhail Khodjaiants
	Moved to the new CDI interfaces.
	* CDebugTarget.java
	* CSignal.java
	* CStackFrame.java
	* CThread.java

2004-09-13 Mikhail Khodjaiants
	Fix for bug 72555: "Toggle breakpoint" action doesn't remove function breakpoints from editor.
	* CDIDebugModel.java

2004-09-10 Mikhail Khodjaiants
	Fixes for breakpoint filtering.
	* CBreakpointManager.java
	* CBreakpoint.java
	* CDebugTarget.java

2004-09-09 Alain Magloire
	Introduction of new classes in the CDI interface
	* ICDIExecuteStep.java
	* ICDIExecuteStepReturn.java
	* ICDIExecuteResume.java
	* ICDISuspend.java
	* ICDIThreadGroup.java

2004-09-07 Mikhail Khodjaiants
	Fix for bug 73498: Condition is cleared when disabled conditional breakpoint is set.
	* CBreakpointManager.java	

2004-09-07 Alain Magloire
	Remove ICDIBreakpointManager.java