@@ -1,3 +1,7 @@
+2004-09-27 Mikhail Khodjaiants
+	Target filtering fixes for watchpoints.
+	* CBreakpointManager.java
+
 2004-09-21 Mikhail Khodjaiants
 	Fixed the problems with the Disassembly view and address breakpoints caused by switch to IAddress.
 	* CBreakpointManager.java
